# language-container-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  PROTO_SOURCES.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: README.md
benches/emit-bench/: Cargo.toml
benches/emit-bench-udf/: Cargo.toml
benches/emit-bench-udf/src/: lib.rs
benches/emit-bench/src/: main.rs
build_info/: language_definitions.json
crates/cargo-exasol-udf/: Cargo.toml
crates/cargo-exasol-udf/src/: build.rs  main.rs  new.rs  validate.rs
crates/cargo-exasol-udf/tests/: build.rs  new.rs  validate.rs
crates/cargo-exaudf/: Cargo.toml  build.rs
crates/cargo-exaudf/src/: build.rs  main.rs  new.rs  validate.rs
crates/cargo-exaudf/tests/: build.rs  new.rs  validate.rs
crates/exa-proto/: Cargo.toml  build.rs
crates/exa-udf-runtime/: Cargo.toml
crates/exa-udf-runtime/src/: artifact.rs  compiler.rs  connect_back.rs  dispatch.rs  error.rs  lib.rs  loader.rs  rowset.rs  schema_check.rs  single_call.rs
crates/exa-udf-runtime/tests/: connect_back.rs  debug_level.rs  dispatch.rs  emit_arrow_dlopen.rs  loader.rs  single_call.rs
crates/exa-zmq-protocol/: Cargo.toml
crates/exa-zmq-protocol/src/: error.rs  lib.rs  loop_.rs  messages.rs  meta.rs  tests.rs  transport.rs
crates/exa-zmq-protocol/tests/: single_call.rs  transport.rs
crates/exasol-udf-macros/: Cargo.toml
crates/exasol-udf-macros/src/: lib.rs
crates/exasol-udf-macros/tests/: annotation.rs  annotation_typed.rs  output_shape.rs  run_error.rs  trybuild.rs  vs_adapter.rs
crates/exasol-udf-macros/tests/trybuild/: bad_annotation_type.rs  bad_annotation_type.stderr  bad_name.rs  bad_name.stderr  dup_entry.rs  dup_entry.stderr  single_entry.rs
crates/exasol-udf-sdk/: Cargo.toml  build.rs
crates/exasol-udf-sdk/src/: abi.rs  connect_back.rs  context.rs  error.rs  lib.rs  value.rs
crates/exasol-udf-sdk/tests/: connect_back.rs  feature_gate.rs
crates/exaudfclient/: Cargo.toml
crates/exaudfclient/src/: main.rs
crates/exaudfclient/tests/: cli.rs
crates/it/: Cargo.toml
crates/it/src/: lib.rs
crates/it/tests/: db_roundtrip.rs
docs/: cargo-ecosystem.md  debugging.md  index.md  installation.md  protocol.md  write-back-guide.md  writing-a-udf.md
scripts/: ci-it-local.sh  install.sh  patch-slc-symlinks.py
specs/: .gitignore  architecture.md  backlog.md  decision-log.md  design.md  mission.md
specs/_decision/: 001-add-v1-rust-udf-slim.md  002-add-v2-rust-udf-complete.md  003-fix-connect-back-external-client.md  004-add-connection-api.md  005-change-docker-alpine-base.md  006-fix-zmq-req-socket.md  007-fix-connect-back-version-matrix.md  008-2026-06-11-vs-adapter-and-single-call-connect-back.md  009-fix-it-matrix-connect-back-address.md  010-change-sdk-type-system.md  011-change-toolchain-edition-2024.md  012-add-dns-name-resolution.md  013-fix-surface-udf-error-messages.md  014-add-scalar-connect-back.md  015-fix-emit-buffer-and-result-streaming.md  016-add-multi-udf-entry-points.md  017-add-emit-batch-arrow.md  018-fix-abi-feature-safety.md  019-add-debug-output-redirect.md  020-fix-zmq-recv-timeout-resilience.md  021-add-emit-transfer-spikes.md  022-fix-run-dispatch-iteration-type.md
specs/_plans/add-connect-back-batch-execute/: decision-log.md
specs/_plans/add-udfcontext-handshake-metadata/: decision-log.md  tasks.md  verification-report.md
specs/_plans/add-v2-rust-udf-complete/: decision-log.md  plan.md  tasks.md
specs/_plans/change-docker-alpine-base/: plan.md
specs/_plans/change-sdk-type-system/: plan.md
specs/_plans/fix-emit-buffer-and-result-streaming/: verification-report.md
specs/_plans/fix-single-call-hook-error-text/: decision-log.md
specs/_plans/fix-zmq-req-socket/: decision-log.md  verification-report.md
specs/_plans/remove-sdk-dead-public-api/: verification-report.md
specs/_recorded/2026-06-05-add-v1-rust-udf-slim/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/_recorded/2026-06-05-add-v2-rust-udf-complete/: tasks.md  verification-report.md
specs/_recorded/2026-06-06-fix-connect-back-external-client/: decision-log.md  next-connection.md  plan.md  tasks.md  verification-report.md
specs/_recorded/2026-06-07-connect-back-fix/: ARCHIVED.md  plan.md
specs/_recorded/2026-06-08-add-connection-api/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/_recorded/2026-06-08-fix-zmq-req-socket/: plan.md  tasks.md
targets/: x86_64-unknown-linux-musl-dylib.json
test-udfs/annotated-double/: Cargo.toml
test-udfs/annotated-fixture/: Cargo.toml
test-udfs/connect-back-cluster-ip/: Cargo.toml
test-udfs/connect-back-crunch/: Cargo.toml
test-udfs/connect-back-insert/: Cargo.toml
test-udfs/connect-back-query/: Cargo.toml
test-udfs/connect-back-query/src/: lib.rs
test-udfs/connect-back-scalar/: Cargo.toml
test-udfs/connect-back-scalar/src/: lib.rs
test-udfs/connect-back-stream/: Cargo.toml
test-udfs/connect-back-stream/src/: lib.rs
test-udfs/emit-arrow-batch/: Cargo.toml
test-udfs/emit-arrow-batch/src/: lib.rs
test-udfs/emit-bulk/: Cargo.toml
test-udfs/emit-k/: Cargo.toml
test-udfs/handshake-meta/: Cargo.toml
test-udfs/json-parse/: Cargo.toml
test-udfs/name-resolution/: Cargo.toml
test-udfs/numeric-temporal-emit/: Cargo.toml
test-udfs/numeric-temporal-emit/src/: lib.rs
test-udfs/numeric-temporal-ingest/: Cargo.toml
test-udfs/numeric-temporal-ingest/src/: lib.rs
test-udfs/resolv-udf/: Cargo.toml
test-udfs/returns-with-emit/: Cargo.toml
test-udfs/scalar-double/: Cargo.toml
test-udfs/scalar-next-illegal/: Cargo.toml
test-udfs/set-filter/: Cargo.toml
test-udfs/set-sum/: Cargo.toml
test-udfs/single-call-fixture/: Cargo.toml
test-udfs/spike-connect/: Cargo.toml
test-udfs/spike-connect/src/: main.rs
test-udfs/timestamp-add-second/: Cargo.toml
test-udfs/timestamp-now/: Cargo.toml
test-udfs/timestamp-passthrough/: Cargo.toml
(+225 files in other folders)
