[workspace]
resolver = "2"
members = [
    "crates/exa-proto",
    "crates/exa-zmq-protocol",
    "crates/exasol-udf-sdk",
    "crates/exasol-udf-macros",
    "crates/exa-udf-runtime",
    "crates/exaudfclient",
    "crates/cargo-exaudf",
    "crates/it",
    "test-udfs/scalar-double",
    "test-udfs/set-filter",
    "test-udfs/json-parse",
    "test-udfs/single-call-fixture",
    "test-udfs/annotated-fixture",
    "test-udfs/connect-back-query",
    "test-udfs/annotated-double",
    "test-udfs/connect-back-insert",
    "test-udfs/connect-back-crunch",
    "test-udfs/connect-back-cluster-ip",
    "test-udfs/spike-connect",
]
# `it` is excluded from default builds: its integration deps (arrow 58,
# testcontainers, reqwest) require Rust >= 1.85 and pull edition2024 crates the
# pinned 1.84 toolchain cannot parse. Build/test it explicitly with a newer
# toolchain: `cargo +1.91 test -p it --features integration`.
default-members = [
    "crates/exa-proto",
    "crates/exa-zmq-protocol",
    "crates/exasol-udf-sdk",
    "crates/exasol-udf-macros",
    "crates/exa-udf-runtime",
    "crates/exaudfclient",
    "crates/cargo-exaudf",
    "test-udfs/scalar-double",
    "test-udfs/set-filter",
    "test-udfs/json-parse",
    "test-udfs/single-call-fixture",
    "test-udfs/annotated-fixture",
    "test-udfs/annotated-double",
    # connect-back-query and connect-back-insert depend on arrow 58 (edition2024)
    # and must be built with Rust >= 1.85: cargo +1.91 build -p connect-back-query
]

[workspace.package]
version = "0.6.0"
license = "MIT"

[workspace.dependencies]
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
indexmap = ">=2.0, <2.14"
zmq = "0.10"
libloading = "0.8"
libc = "0.2"
arrow = { version = "58", default-features = false, features = ["ipc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
testcontainers = { version = "0.23", features = ["http_wait"] }
reqwest = { version = "0.12", features = ["blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
exarrow-rs = { version = "0.12.5", features = ["websocket"] }

[profile.release]
strip = "symbols"
opt-level = 3
