[workspace]
resolver = "2"
members = [
    "crates/exa-proto",
    "crates/exa-zmq-protocol",
    "crates/exasol-udf-sdk",
    "crates/exasol-udf-macros",
    "crates/exa-udf-runtime",
    "crates/exaudfclient",
    "crates/cargo-exasol-udf",
    "crates/it",
    "test-udfs/scalar-double",
    "test-udfs/set-filter",
    "test-udfs/json-parse",
    "test-udfs/single-call-fixture",
    "test-udfs/annotated-fixture",
    "test-udfs/connect-back-query",
    "test-udfs/connect-back-scalar",
    "test-udfs/connect-back-insert",
    "test-udfs/connect-back-crunch",
    "test-udfs/connect-back-cluster-ip",
    "test-udfs/resolv-udf",
    "test-udfs/emit-bulk",
    "test-udfs/emit-arrow-batch",
    "test-udfs/connect-back-stream",
    "test-udfs/timestamp-add-second",
    "test-udfs/timestamp-now",
    "test-udfs/timestamp-passthrough",
    "benches/emit-bench",
    "benches/emit-bench-udf",
]
# `it` requires a live Exasol container; build/test it explicitly:
# `cargo test -p it --features integration`
default-members = [
    "crates/exa-proto",
    "crates/exa-zmq-protocol",
    "crates/exasol-udf-sdk",
    "crates/exasol-udf-macros",
    "crates/exa-udf-runtime",
    "crates/exaudfclient",
    "crates/cargo-exasol-udf",
    "test-udfs/scalar-double",
    "test-udfs/set-filter",
    "test-udfs/json-parse",
    "test-udfs/single-call-fixture",
    "test-udfs/annotated-fixture",
    "test-udfs/connect-back-query",
    "test-udfs/connect-back-insert",
    "test-udfs/connect-back-crunch",
    "test-udfs/connect-back-cluster-ip",
    "test-udfs/resolv-udf",
    "test-udfs/emit-bulk",
    "test-udfs/emit-arrow-batch",
    "test-udfs/connect-back-stream",
    "test-udfs/timestamp-add-second",
    "test-udfs/timestamp-now",
    "test-udfs/timestamp-passthrough",
]

[workspace.package]
version = "0.18.0"
license = "MIT"
repository = "https://github.com/exasol-labs/language-container-rs"
homepage = "https://github.com/exasol-labs/language-container-rs"

[workspace.dependencies]
# Internal SDK, published to crates.io. The `version` here MUST track
# [workspace.package].version so dependents publish against the matching release.
exasol-udf-sdk = { path = "crates/exasol-udf-sdk", version = "0.18.0" }
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
zmq = "0.10"
libloading = "0.8"
libc = "0.2"
arrow = { version = "58", default-features = false, features = ["ipc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
testcontainers = { version = "0.23", features = ["http_wait"] }
reqwest = { version = "0.12", features = ["blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
exarrow-rs = { version = "^0.13.0", features = ["websocket"] }
chrono = "0.4"

[profile.release]
strip = "symbols"
opt-level = 3
