[package]
name = "emit-bench-udf"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[lib]
name = "emit_bench_udf"
crate-type = ["cdylib"]

# Must match the host SLC's SDK feature set exactly. The host (exaudfclient →
# runtime "connect-back") compiles UdfContext with BOTH connect-back and
# emit-arrow, which places the cfg-gated `emit_record_batch_ipc` after the
# connect-back methods in the trait-object vtable. A UDF built with emit-arrow
# only would put `emit_record_batch_ipc` at a lower index → emit_batch silently
# dispatches to the host's `cluster_ip` and emits nothing. So enable connect-back
# here too (it implies emit-arrow) for vtable parity.
[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk", features = ["emit-arrow", "connect-back"] }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
arrow = { workspace = true }
