[package]
name = "emit-bench-udf"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[lib]
name = "emit_bench_udf"
crate-type = ["cdylib"]

# Only `emit-arrow` is needed: the UDF uses `ctx.emit_batch` (the `EmitBatch`
# ext-trait + arrow `RecordBatch`). The former `connect-back` feature — enabled
# here purely for trait-object vtable parity with the host — is gone: the
# `UdfContext` vtable is now feature-independent (#31), so a feature mismatch can
# no longer misdispatch `emit_batch`.
[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk", features = ["emit-arrow"] }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
arrow = { workspace = true }
chrono = { workspace = true }
