[package]
name = "exa-udf-runtime"
version.workspace = true
edition = "2021"

[dependencies]
exa-proto = { path = "../exa-proto" }
exa-zmq-protocol = { path = "../exa-zmq-protocol" }
exasol-udf-sdk = { path = "../exasol-udf-sdk" }
libloading = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true, optional = true }
exarrow-rs = { workspace = true, optional = true }
rustls = { version = "0.23", features = ["aws_lc_rs"], optional = true }
tokio = { workspace = true, optional = true }

[features]
connect-back = ["exasol-udf-sdk/connect-back", "dep:arrow", "dep:exarrow-rs", "dep:rustls", "dep:tokio"]

[dev-dependencies]
zmq = { workspace = true }
prost = { workspace = true }
