[package]
name = "exa-udf-runtime"
publish = false
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
exa-proto = { path = "../exa-proto" }
exa-zmq-protocol = { path = "../exa-zmq-protocol" }
exasol-udf-sdk = { path = "../exasol-udf-sdk" }
chrono = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true, optional = true }
exarrow-rs = { workspace = true, optional = true }
rustls = { version = "0.23", features = ["aws_lc_rs"], optional = true }
tokio = { workspace = true, optional = true }
# Fast digit formatter for the string-block emit fast-path
# (`fast_decimal_to_string`); always compiled.
itoa = { workspace = true }

[features]
emit-arrow = ["exasol-udf-sdk/emit-arrow", "dep:arrow"]
connect-back = ["emit-arrow", "dep:exarrow-rs", "dep:rustls", "dep:tokio"]

[dev-dependencies]
zmq = { workspace = true }
prost = { workspace = true }
tracing-subscriber = { workspace = true }
