[package]
name = "exa-zmq-protocol"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
exa-proto = { path = "../exa-proto" }
exasol-udf-sdk = { path = "../exasol-udf-sdk" }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zmq = { workspace = true }
chrono = { workspace = true }
