[package]
name = "exasol-udf-macros"
version.workspace = true
license.workspace = true
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
exasol-udf-sdk = { path = "../exasol-udf-sdk" }

[dev-dependencies]
trybuild = "1"
