[package]
name = "exaudfclient"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
exa-udf-runtime = { path = "../exa-udf-runtime", features = ["connect-back"] }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
