[package]
name = "it"
version.workspace = true
license.workspace = true
edition = "2021"
rust-version = "1.85"

[features]
default = ["db-2026-1"]
integration = ["dep:testcontainers", "dep:rustls"]
db-2025-1 = []
db-2025-2 = []
db-2026-1 = []

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
exarrow-rs = { workspace = true }
arrow = { workspace = true }
testcontainers = { workspace = true, optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"], optional = true }
