[package]
name = "connect-back-query"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk", features = ["connect-back"] }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
arrow = { workspace = true }
