[package]
name = "connect-back-scalar"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk", features = ["connect-back"] }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
arrow = { workspace = true }
