[package]
name = "connect-back-stream"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[lib]
name = "connect_back_stream"
crate-type = ["cdylib"]

[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk", features = ["connect-back"] }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
arrow = { workspace = true }
