[package]
name = "emit-arrow-batch"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[lib]
name = "emit_arrow_batch"
crate-type = ["cdylib"]

[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk", features = ["emit-arrow"] }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
arrow = { workspace = true }
