[package]
name = "numeric-temporal-ingest"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[lib]
name = "numeric_temporal_ingest"
crate-type = ["cdylib"]

[dependencies]
exasol-udf-sdk = { path = "../../crates/exasol-udf-sdk" }
exasol-udf-macros = { path = "../../crates/exasol-udf-macros" }
chrono = { workspace = true }
