[package]
name = "spike-connect"
publish = false
version = "0.1.0"
license.workspace = true
edition = "2024"

[[bin]]
name = "spike-connect"
path = "src/main.rs"

[dependencies]
exarrow-rs = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
